# nimbro_network

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .kdev_include_paths  LICENSE  README.md  jenkins_build.sh  rosinstall
nimbro_cam_transport/: CMakeLists.txt  README.md  package.xml
nimbro_cam_transport/src/: receiver.cpp  rgb_to_yuv420.cpp  rgb_to_yuv420.h  sender.cpp
nimbro_cam_transport/test/: basic.py  basic.test
nimbro_log_transport/: CMakeLists.txt  README.md  package.xml
nimbro_log_transport/msg/: LogBlock.msg
nimbro_log_transport/src/: log_receiver.cpp  log_sender.cpp
nimbro_net_monitor/: CMakeLists.txt  package.xml  rqt_plugins.xml
nimbro_net_monitor/contrib/archive/: README.md  archive.h  main.cpp  test.sh
nimbro_net_monitor/msg/: ConnectionStats.msg  InterfaceStats.msg  NetworkStats.msg  NodeStats.msg  PeerStats.msg  WifiStats.msg
nimbro_net_monitor/src/: monitor_node.cpp  nl80211.cpp  nl80211.h  route.cpp  route.h  route_test.cpp  rtnetlink.cpp  rtnetlink.h  standalone_monitor.cpp  standalone_proto.h  standalone_receiver.cpp
nimbro_net_monitor/src/gui/: CMakeLists.txt  monitor_display.cpp  monitor_display.h  monitor_display.ui
nimbro_network/: CMakeLists.txt  package.xml
nimbro_service_transport/: CMakeLists.txt  README.md  package.xml  plugin.xml
nimbro_service_transport/doc/: configuration.md
nimbro_service_transport/launch/: test_udp.launch
nimbro_service_transport/msg/: ServiceStatus.msg
nimbro_service_transport/src/: client_handler.h  common.cpp  common.h  service_client.cpp  service_server.cpp
nimbro_service_transport/src/gui/: service_widget.cpp  service_widget.h
nimbro_service_transport/src/tcp/: client_handler.cpp  client_handler.h  protocol.h  service_client.cpp  service_client.h  service_server.cpp  service_server.h
nimbro_service_transport/src/udp/: le_value.h  protocol.h  udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h
nimbro_service_transport/srv/: AddTwoInts.srv
nimbro_service_transport/test/: test_client.cpp  test_server.cpp  test_tcp.test  test_udp.test
nimbro_tf_throttle/: CMakeLists.txt  README.md  package.xml
nimbro_tf_throttle/src/: tf_static_repeater.cpp  tf_throttle.cpp
nimbro_topic_transport/: CMakeLists.txt  README.md  bandwidth_plugin.xml  package.xml  rqt_plugin.xml
nimbro_topic_transport/data/gadget/: interface.h  rewrite_header.cpp  topic_rewriter.cpp
nimbro_topic_transport/data/pch/: ros_includes.h
nimbro_topic_transport/doc/: FEC.md  configuration.md  getting_started.md
nimbro_topic_transport/launch/: bidirectional_machine1.launch  bidirectional_machine2.launch  bidirectional_topics.launch  receiver.launch  sender.launch  tcp_receiver.launch  tcp_receiver_back.launch  tcp_receiver_latch_helper.launch  tcp_sender.launch  tcp_sender_back.launch  tcp_sender_latch_helper.launch  test_receiver.launch  test_sender.launch  topics.yaml  topics_back.yaml  topics_machine1.yaml  topics_machine2.yaml  udp_receiver.launch  udp_sender.launch
nimbro_topic_transport/msg/: CompressedMsg.msg  DestinationStats.msg  ReceiverStats.msg  SenderStats.msg  TopicBandwidth.msg
nimbro_topic_transport/src/: action_proxy.cpp  le_value.h  message.h  subprocess.cpp  subprocess.h  tcp_packet.h  thread_pool.cpp  thread_pool.h  topic_info.cpp  topic_info.h  transceiver.cpp  udp_packet.h
nimbro_topic_transport/src/gui/: CMakeLists.txt  bandwidth_gui.cpp  bandwidth_gui.h  dot_widget.cpp  dot_widget.h  plot_widget.cpp  plot_widget.h  scrolling_buffer.cpp  scrolling_buffer.h  topic_gui.cpp  topic_gui.h  topic_gui.ui
nimbro_topic_transport/src/receiver/: decompressor.cpp  decompressor.h  depacketizer.cpp  depacketizer.h  main.cpp  publisher.cpp  publisher.h  receiver.cpp  receiver.h  rewriter.cpp  rewriter.h  ros_includes.cpp  tcp_receiver.cpp  tcp_receiver.h  udp_receiver.cpp  udp_receiver.h
nimbro_topic_transport/src/sender/: compressor.cpp  compressor.h  get_route.cpp  get_route.h  main.cpp  message.h  packetizer.cpp  packetizer.h  sender.cpp  sender.h  subscriber.cpp  subscriber.h  tcp_sender.cpp  tcp_sender.h  thread_pool.h  topic.h  udp_sender.cpp  udp_sender.h
nimbro_topic_transport/src/tcp/: tcp_packet.h  tcp_receiver.cpp  tcp_receiver.h  tcp_receiver_latch_helper.py  tcp_sender.cpp  tcp_sender.h
nimbro_topic_transport/src/udp/: bandwidth_control.cpp  bandwidth_control.h  topic_receiver.cpp  topic_receiver.h  topic_sender.cpp  topic_sender.h  udp_packet.h  udp_receiver.cpp  udp_receiver.h  udp_sender.cpp  udp_sender.h
nimbro_topic_transport/srv/: DumpLog.srv  LatchedMessageRequest.srv  SetDestinations.srv
nimbro_topic_transport/test/: bidirectional.test  catch.hpp  tcp.test  test_bidirectional.cpp  test_comm.cpp  topic_transport.test  topic_transport_fec.test  topics.yaml  transceiver.test  udp.test  udp_fec.test  udp_sender.yaml
nimbro_topic_transport/test/unit/: test_compression.cpp  test_packetizer.cpp
nimbro_topic_transport/utils/: extract_compile_flags.sh  get_msg_def.py  measure_latency.cpp  measure_tf_latency.cpp  nimbro_network.lua  nimbro_network_fec.lua  send_time.cpp
sb_log_transport/: CMakeLists.txt  package.xml
sb_log_transport/msg/: LogBlock.msg  LogMsg.msg
sb_log_transport/src/: log_receiver.cpp  log_sender.cpp
sb_service_transport/: CMakeLists.txt  package.xml
sb_service_transport/launch/: test.launch
sb_service_transport/scripts/: get_md5.py
sb_service_transport/src/: client_handler.cpp  client_handler.h  le_value.h  protocol.h  service_client.cpp  service_client.h  service_server.cpp
sb_topic_transport/: CMakeLists.txt  package.xml
sb_topic_transport/launch/: test_sender.launch
sb_topic_transport/src/: le_value.h  topic_info.cpp  topic_info.h
sb_topic_transport/src/tcp/: tcp_packet.h  tcp_receiver.cpp  tcp_receiver.h  tcp_sender.cpp  tcp_sender.h
sb_udp/: CMakeLists.txt  package.xml
sb_udp/launch/: test_send.launch
sb_udp/src/: le_value.h  topic_sender.cpp  topic_sender.h  udp_packet.h  udp_receiver.cpp  udp_receiver.h  udp_sender.cpp  udp_sender.h
tf_throttle/: CMakeLists.txt  package.xml
tf_throttle/src/: tf_throttle.cpp
(+20 files in other folders)
