<package format="2">
	<name>nimbro_net_monitor</name>
	<description>Monitors roscore and network usage</description>
	<version>0.0.1</version>
	<license>BSD</license>

	<maintainer email="max.schwarz@ais.uni-bonn.de">Max Schwarz</maintainer>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
</package>
