<?xml version="1.0"?>
<package format="2">
	<name>nimbro_network</name>
	<version>2.0.0</version>
	<description>nimbro_network metapackage</description>

	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>nimbro_cam_transport</run_depend>
	<run_depend>nimbro_log_transport</run_depend>
	<run_depend>nimbro_service_transport</run_depend>
	<run_depend>nimbro_tf_throttle</run_depend>
	<run_depend>nimbro_topic_transport</run_depend>

	<export>
		<metapackage/>
	</export>
</package>
