<package>
	<name>nimbro_topic_transport</name>
	<version>1.0.0</version>
	<description>Contains nodes for TCP/UDP communication between ROS masters</description>

	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

	<license>GPLv2</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>topic_tools</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>topic_tools</run_depend>

	<export>
	</export>
</package>
