<package format="2">
	<name>nimbro_topic_transport</name>
	<version>1.0.0</version>
	<description>Contains nodes for TCP/UDP communication between ROS masters</description>

	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

	<license>GPLv2</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>topic_tools</depend>

	<!-- This is not a hard dependency, the package compiles without plot_msgs. -->
	<depend>plot_msgs</depend>

	<export>
	</export>
</package>
