<package format="2">
	<name>nimbro_topic_transport</name>
	<version>1.0.0</version>
	<description>Contains nodes for TCP/UDP communication between ROS masters</description>

	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

	<license>GPLv2</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>topic_tools</depend>

	<build_depend>message_generation</build_depend>

	<!-- This is not a hard dependency, the package compiles without plot_msgs. -->
	<depend>plot_msgs</depend>

	<!-- This is not a hard dependency, the package compiles without config_server. -->
	<depend>config_server</depend>

	<!-- This is not a hard dependency, the package compiles without catch_ros -->
	<depend>catch_ros</depend>

	<depend>rqt_gui</depend>

	<export>
		<rqt_gui plugin="${prefix}/rqt_plugin.xml" />
		<rqt_gui plugin="${prefix}/bandwidth_plugin.xml" />
	</export>

</package>
