<package>
	<name>sb_log_transport</name>
	<version>0.0.0</version>
	<description>Handles transport of log messages over unreliable connections</description>

	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rosgraph_msgs</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rosgraph_msgs</run_depend>

	<export>
	</export>
</package>
