<package>
	<name>tf_throttle</name>
	<version>1.0.0</version>
	<description>Throttles TF output down to bandwidth suitable for wifi</description>

	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>tf</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>tf</run_depend>

	<export>
	</export>
</package>
